@@ -21,9 +21,18 @@
 // ********************************************************************
 //
 //
-// $Id: Tst33PrimaryGeneratorAction.hh,v 1.1 2002-10-29 15:43:05 dressel Exp $
+// $Id: Tst33PrimaryGeneratorAction.hh,v 1.2 2002-11-20 13:09:16 dressel Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
+// ----------------------------------------------------------------------
+// Class Tst33PrimaryGeneratorAction
+//
+// Class description:
+//
+// Create 10 MeV neutrons.
+
+// Author: Michael Dressel (Michael.Dressel@cern.ch)
+// ----------------------------------------------------------------------
 
 #ifndef Tst33PrimaryGeneratorAction_hh
 #define Tst33PrimaryGeneratorAction_hh Tst33PrimaryGeneratorAction_hh 
