@@ -21,13 +21,21 @@
 // ********************************************************************
 //
 //
-// $Id: Tst33TimedEventAction.hh,v 1.2 2002-10-31 08:32:44 dressel Exp $
+// $Id: Tst33TimedEventAction.hh,v 1.3 2002-11-20 13:09:16 dressel Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
+// ----------------------------------------------------------------------
+// Class Tst33TimedEventAction
+//
+// Class description:
+//
+// Tells run manager to stop after time is over. Calculations for
+// FOM in special cell.
+// 
 
-//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
-//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
+// Author: Michael Dressel (Michael.Dressel@cern.ch)
+// ----------------------------------------------------------------------
 
 #ifndef Tst33TimedEventAction_h
 #define Tst33TimedEventAction_h 1
@@ -39,7 +47,6 @@
 
 class G4CellScorer;
 
-//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
 
 class Tst33TimedEventAction : public Tst33VEventAction
 {
@@ -50,7 +57,7 @@ public:
 public:
   virtual void   BeginOfEventAction(const G4Event*);
   virtual void   EndOfEventAction(const G4Event*);
-  virtual void SetCell_19_Scorer(const G4CellScorer *scorer);
+  virtual void SpecialCellScorer(const G4CellScorer *scorer);
   virtual void Clear();
 
 private:
