@@ -1,4 +1,4 @@
-$Id: History,v 1.6 2002-11-04 13:50:32 gcosmo Exp $
+$Id: History,v 1.7 2002-11-20 13:12:32 dressel Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,11 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Nov, 20th 2002 M.Dressel 
+- some code cleanup
+- added some comments to the header files
+- removed some old files
 
 Nov, 4th 2002 M.Dressel  (test33-V04-01-01)
 - remove G4std:: where it does not belong to
